--- a/angular-site/src/app/editor/object-list.component.scss
+++ b/angular-site/src/app/editor/object-list.component.scss
@@ -50,11 +50,13 @@ $accent2:   #42a5f5;
 .search-field {
   width: 100%;
   padding: 8px 14px 0;
+  --mat-form-field-container-height: 36px;
 
   ::ng-deep .mat-mdc-form-field-subscript-wrapper { display: none; }
   ::ng-deep .mat-mdc-form-field-infix { min-height: 36px; padding-top: 8px !important; padding-bottom: 8px !important; }
   ::ng-deep .mat-mdc-text-field-wrapper { background: $surface3 !important; }
   ::ng-deep mat-icon[matPrefix] { color: $muted; font-size: 18px !important; }
+  ::ng-deep .mat-mdc-floating-label { top: 50%; }
 }
 
 .object-list {
